Adjusted styling to prevent ‘Forgot Password’ falling out of box and also stretching image so that portrait on an iPad doesn’t have lots of white space

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -114,7 +114,8 @@ div.loginPage {
 }
 
 div.loginPage md-whiteframe {
-    min-height: 40%;
+    height: 360px;
+    width: 360px;
     background-color: white;
 }
 
